# grpc-crash

./: Cargo.toml  README.md
client/: Cargo.toml  build.rs  runner.sh
client/src/: crash.rs  crash_grpc.rs  lib.rs  test.rs
proto/: crash.proto
server/: Cargo.toml  build.rs  config.toml
server/src/: config.rs  crash.rs  crash_grpc.rs  main.rs
