[package]

name = "client"
version = "0.1.0"
authors = ["GiGa infosystems GmbH <support@giga-infosystems.com>"]
edition = "2018"
publish = false

[dependencies]

env_logger = "0.6"
futures = "0.1"
futures-cpupool = "0.1"
log = "0.4"
protobuf = "2"
serde = { version = "1.0", features = ["derive"] }
tls-api = "0.2"
tls-api-native-tls = "0.2"
tonic = "0.1.1"
prost = "0.6"
prost-types = "0.6"
tokio = { version = "0.2", features = ["rt-threaded", "time", "stream", "fs", "macros", "uds"] }

[build-dependencies]
tonic-build = "0.1.1"
